<?xml version="1.0"?>
<package format="3">
  <name>ti_mmwave_rospkg</name>
  <version>3.4.0</version>
  <description>The ti_mmwave_rospkg package. (TI > Leo Zhang > ASL)</description>
  <maintainer email="dr.leo.zhang@outlook.com">Leo Zhang</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/radar-lab/ti_mmwave_rospkg</url> -->
  <author email="dr.leo.zhang@outlook.com">Leo Zhang</author>

  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>serial</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  <depend>pcl_ros</depend>
  <depend>roslint</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/mmWave_nodelets.xml" />
  </export>
  
</package>
