<?xml version="1.0"?>
<package format="3">
  <name>ti_mmwave_ros2</name>
  <version>3.5.0</version>
  <description>The ti_mmwave_ros2 package. (TI  Leo Zhang  ASL)</description>
  <maintainer email="nobody@nowhere.com">ASL Team</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/ethz-asl/ti_mmwave_ros2</url>
  <author email="nobody@nowhere.com">ASL Team</author>

  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
