<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xwr_config</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="plaba417@students.bju.edu">plaba</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>ti_mmwave_msgs</build_depend>
  <build_depend>ament_cmake_python</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ti_mmwave_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
